# melange-react-dates

./: .gitignore  CHANGELOG.md  CHANGES.md  Makefile  README.md  bsconfig.json  dune-project  melange-react-dates.opam  package-lock.json  package.json
examples/: README.md  bsconfig.json  package-lock.json  package.json  webpack.config.js
examples/public/: index.html
examples/src/: Example1.re  ExampleDateRangePicker.re  ExampleSingleDatePicker.re  Index.re  RD.re  RDCore.re  index.css  index.re
src/: BsReactDates.re  BsReactDates__DateRangePicker.re  BsReactDates__DateRangePickerPhrases.re  BsReactDates__DayPickerRangeController.re  BsReactDates__DayPickerSingleDateController.re  BsReactDates__SingleDatePicker.re  BsReactDates__Utils.re  DateRangePicker.re  DateRangePickerPhrases.re  DayPickerRangeController.re  DayPickerSingleDateController.re  Initialize.re  ReactDates.re  SingleDatePicker.re  Utils.re  dune
