opam-version: "2.0"
synopsis: "Melange bindings for react-dates"
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
tags: ["melange" "react-js" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-react-dates"
bug-reports: "https://github.com/ahrefs/melange-react-dates"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason"
  "melange-moment"
  "reason-react"
  "reason-react-ppx"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-react-dates.git"
depexts: [
  ["react-dates"] {npm-version = "^21.8.0"}
]
pin-depends: [
  [ "melange-moment.dev"    "git+https://github.com/ahrefs/melange-moment.git#0c11b2fdf0525686bf37c85be41f62c5e8d8ba1a" ]
]
