opam-version: "2.0"
synopsis: "Melange bindings for react-dates"
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
tags: ["melange" "react-js" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-react-dates"
bug-reports: "https://github.com/ahrefs/melange-react-dates"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason"
  "melange-moment"
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx" {>= "0.14.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-react-dates.git"
depexts: [
  ["react-dates"] {npm-version = "^21.8.0"}
]
pin-depends: [
  ["reason-react.dev" "https://github.com/reasonml/reason-react/archive/7856cb0c3fdad99c9d4e6f1453e53aeb0e737c3b.tar.gz"]
  ["reason-react-ppx.dev" "https://github.com/reasonml/reason-react/archive/7856cb0c3fdad99c9d4e6f1453e53aeb0e737c3b.tar.gz"]
]
